@@ -16,8 +16,10 @@ expect {
     -re {gamma="abcdefghijklmnopqrstuvwxyz"} { incr ok; exp_continue }
     -re {iota."one".="eleven"} { incr ok; exp_continue }
     -re {iota."two".="twelve"} { incr ok; exp_continue }
+    -re {epsilon."one",1. @count=0x4 @min=0x1 @max=0x4 @sum=0xa @avg=0x2} { incr ok; exp_continue }
+    -re {epsilon."two",2. @count=0x4 @min=0xa @max=0x28 @sum=0x64 @avg=0x19} { incr ok; exp_continue }
     timeout { fail "$test (timeout)" }
     eof { }
 }
 wait
-if {$ok == 8} { pass "$test ($ok)" } { fail "$test ($ok)" }
+if {$ok == 10} { pass "$test ($ok)" } { fail "$test ($ok)" }
