@@ -1,4 +1,4 @@
-global alpha, beta, gamma, iota
+global alpha, beta, gamma, iota, epsilon
 
 probe begin {
  gamma = "abcdefghijklmnopqrstuvwxyz"
@@ -15,6 +15,15 @@ probe begin {
  beta["one",2] = 2
  beta["two",1] = 3
  beta["two",2] = 4
+
+ epsilon["one",1] <<< 1
+ epsilon["one",1] <<< 2
+ epsilon["one",1] <<< 3
+ epsilon["one",1] <<< 4
+ epsilon["two",2] <<< 10
+ epsilon["two",2] <<< 20
+ epsilon["two",2] <<< 30
+ epsilon["two",2] <<< 40
 }
 
 probe timer.ms(2000) {
