@@ -1,3 +1,8 @@
+2008-09-01  Stan Cox  <scox@redhat.com>
+
+	* systemtap.base/global_end.stp: Also check statistics.
+	* systemtap.base/global_end.exp: Likewise.
+
 2008-08-29  David Smith  <dsmith@redhat.com>
 
 	PR6841
